RL: Modify model explanations

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9de04851",
+   "id": "b9112276",
    "metadata": {},
    "source": [
     "# Models In Reinforcement Learning\n",
@@ -929,14 +929,27 @@
     "    - Pros: Fast, memory-efficient.\n",
     "    - Cons: Less accurate, as each sample is only an approximation of the full distribution.\n",
     "\n",
-    "2. Distribution model: specify the complete probability distribution over all possible outcomes.\n",
+    "2. Distribution models: specify the complete probability distribution over all possible outcomes.\n",
     "    - Pros: More accurate and informative.\n",
     "    - Cons: Larger, more computationally expensive.\n",
     "    - Note: A distribution model can also be used to generate a sample model by sampling from it.\n",
     "\n",
-    "In reinforcement learning, there are two types of learning methods, model-based and model-free methods. Model-based methods. Model-based methods rely heavily on planning—using the model to simulate possible futures, evaluate them, and improve the policy before acting in the real environment, like DP. Model-free methods, on the other hand, do not learn or estimate the model and learn the value function directly from experience through trial and error, like MC or TD methods.\n",
+    "In reinforcement learning, there are two types of learning methods, model-based and model-free methods. Model-based methods. Model-based methods rely heavily on planning—using the model to simulate possible futures, evaluate them, and improve the policy before acting in the real environment, like DP, which looks ahead for the future rewards before selecting an action. Model-free methods, on the other hand, do not learn or estimate the model and learn the value function directly from experience through trial and error, like MC or TD methods.\n",
     "\n",
     "Note: For learning to happen, the agent must interact with an environment, which itself follows some transition and reward dynamics (this is the “true model” of the world). The key difference between model-based and model-free methods lies in whether the learning algorithm explicitly learns or uses its own approximation of this model. Both approaches aim to improve estimates of value functions (and ultimately the policy), but model-based methods do so by first estimating the transition and reward functions and then planning with them, whereas model-free methods skip this step and learn value functions directly from experience without building an explicit model.\n",
+    "\n",
+    "Note: In any reinforcement learning setup, there is always one model that truly exists, which is the environment’s real rules. This is the true model of the world, whether it’s physics in the real world or the programmed logic in a simulator. The difference between model-based and model-free methods is about whether the agent also builds a second model of its own:\n",
+    "\n",
+    "Model-based methods have two models in play\n",
+    "* The true model: the real environment’s transition and reward dynamics that the agent interact with.\n",
+    "* The agent’s learned model: its internal guess at how the environment works, which is used for planning and action selection\n",
+    "\n",
+    "The agent first tries to learn this internal model from experience. Once it has it, it can run mental simulations inside its head, planning several steps ahead without touching the real environment.\n",
+    "\n",
+    "Model-free methods have only one model\n",
+    "* The true environment model that the agent interact with\n",
+    "\n",
+    "The agent doesn’t bother creating its own copy. Instead, it directly learns value functions and policies from trial-and-error experience, without explicitly modeling how states change or what rewards to expect.\n",
     "\n",
     "# Planning with Model Experience\n",
     "In model-based RL, planning takes the model as input and outputs an improved policy for interacting with the environment. The process can also refine the model itself as more real-world data is gathered, creating a continuous loop of improvement between model learning and policy optimization. The key of planning is to obtain a better estimation of the value functions\n",
