NLP: Added Prompt engineering

--- a/notebooks/NLP.ipynb
+++ b/notebooks/NLP.ipynb
@@ -1245,9 +1245,52 @@
    "id": "ba799d5d",
    "metadata": {},
    "source": [
-    "# Reinforcement Learning From Human Feedback\n",
+    "# Reinforcement Learning From Human Feedback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce941548",
+   "metadata": {},
+   "source": [
+    "# Context Engineering\n",
     "\n",
-    "# Direct "
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1400/format:webp/0*0V7rL_0pjOrVA2Zb\" width=500>\n",
+    "\n",
+    "## Prompt Engineering\n",
+    "Prompt engineering is a key aspect of context engineering. A prompt is simply the input given to a Generative AI model to guide its output, and prompt engineering is the practice of shaping that input to achieve better results.\n",
+    "\n",
+    "It is arguably the simplest form of context engineering because it requires no changes to the model or code. Instead, prompts are written directly in human language, and their effects take place immediately. This makes prompt engineering especially useful when fast iteration is needed or when computational resources are limited.\n",
+    "\n",
+    "Despite its simplicity, prompt engineering can significantly improve a model’s accuracy and reliability when a well-designed prompt is used. There are six main categories of techniques that can help us achieve this faster:\n",
+    "1. Zero-shot\n",
+    "2. Few-shot\n",
+    "3. Chain-of-thought\n",
+    "4. Decomposition\n",
+    "5. Ensembling\n",
+    "6. Self-criticism (or self-reflection)\n",
+    "\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:1300/format:webp/1*hdTtxGg3FbJGIULWGk6wSw.png\" width=600>\n",
+    "\n",
+    "### Zero-shot\n",
+    "Zero-shot prompting means asking the model to perform a task without providing any examples or extended context. This approach gives the model greater flexibility in generating responses. However, because the model must infer the task entirely from the instructions, the outputs can be less consistent and less accurate, as many decisions are left to the model’s internal reasoning without explicit human guidance.\n",
+    "\n",
+    "### Few-shot\n",
+    "Few-shot prompting builds on zero-shot prompting by including a small number of examples that demonstrate how the task should be performed. These examples act as templates, guiding the model toward the desired format, reasoning steps, or style of response. While this can improve performance and consistency, it does not guarantee strong generalization. The choice of examples is critical as the given samples should be representative of the task space and balanced to avoid introducing bias or skewed behavior.\n",
+    "\n",
+    "### Chain of Thought (CoT)\n",
+    "CoT prompting explicitly instructs the model to generate intermediate reasoning steps before producing the final answer. This approach encourages the model to “think out loud,” using additional space and tokens to break down the problem step by step. CoT is particularly effective for tasks that require multi-step reasoning, logical sequences, or mathematical problem solving, as it helps the model arrive at a more accurate solution rather than jumping directly to an answer. However, CoT has limitations. It may not improve performance for tasks without a clear reasoning structure, and it can be unnecessary for simple tasks. Moreover, the effectiveness of CoT depends on the model’s underlying reasoning ability learned during pre-training. For highly complex problems beyond the model’s capability, CoT alone will not guarantee correct results.\n",
+    "\n",
+    "### Decomposition\n",
+    "Decomposition prompting instructs the model to break down a complex task into smaller, manageable sub-tasks, solve them individually, and then combine the results into a final answer. This strategy leverages the model’s strength in handling simpler problems, making it more effective for larger or multi-step tasks. Decomposition can also involve planning steps or even tool use to achieve better overall results. However, if the decomposition is poorly defined, the model may generate incomplete, redundant, or inconsistent sub-results. Additionally, the process can increase token usage and complexity, which may not be efficient for simpler tasks that do not require structured breakdown.\n",
+    "\n",
+    "### Ensembling\n",
+    "Ensembling is a prompting strategy where the same task is addressed using multiple different prompts, producing several responses that are then aggregated into a final answer. This approach increases stability and reliability by reducing dependence on a single, perfect prompt as it relies on multiple “good enough” prompts can collectively yield strong results. However, ensembling has limitations. It generally requires more computation and tokens, since multiple prompts must be run. Additionally, if the task itself is too complex or beyond the model’s capability, ensembling will not resolve the underlying limitations of the model.\n",
+    "\n",
+    "### Self-Criticism\n",
+    "Self-criticism prompting instructs the model to critique and refine its own responses before presenting a final answer. By explicitly asking the model to review, verify, and reflect on its output, this method can improve accuracy, reduce errors, and encourage more thoughtful reasoning. However, self-criticism may lead to longer and more verbose outputs, increasing token usage. In some cases, the model may generate superficial critiques that do not meaningfully improve the answer.\n",
+    "\n",
+    "Overall, each prompting technique has its own strengths and limitations, and they can often be used in combination to achieve better results. While prompt engineering is a valuable starting point within context engineering, it is not a reliable solution for many complex tasks on its own. To handle such cases effectively, it should be complemented with other context engineering strategies and techniques."
    ]
   },
   {
@@ -1278,9 +1321,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1292,7 +1335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
