RL: Modify Q-learning

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -863,9 +863,9 @@
     "  $$q_*(s, a) = \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma \\max_{a'} q_*(s', a') \\right]$$\n",
     "\n",
     "\n",
-    "Therefore, SARSA need to follow policy iteration by first estimate $q_\\pi$ from experience, then make the policy greedy (or $\\epsilon$-greedy) with respect to $q_\\pi$. On the other hand, Q-learning effectively uses value iteration. It updates $q(s,a)$ as if it were already the optimal $q_*$, combining policy evaluation and improvement in a single step.\n",
+    "Therefore, SARSA need to follow policy iteration by first estimate $q_\\pi$ from experience, then make the policy greedy (or $\\epsilon$-greedy) with respect to $q_\\pi$. On the other hand, Q-learning effectively uses value iteration. It updates $q(s,a)$ as if it were already the optimal $q_*$, combining policy evaluation and improvement in a single step during the update.\n",
     "\n",
-    "Q-learning is an off-policy algorithm because it always learns from the value of the best possible action it could take in the next state, rather than the value of the action it actually took. In this case, the target policy (the policy Q-learning is trying to learn) is always greedy with respect to the current action-value estimates. The behaviour policy (the policy used to select actions during learning) can be any exploratory policy, such as $\\epsilon$-greedy or even random, as long as it ensures sufficient exploration. This separation between the behavior policy and the target policy is what makes Q-learning off-policy.\n",
+    "Q-learning is an off-policy algorithm because it always learns from the value of the best possible action it could take in the next state, rather than the value of the action it actually took. In this case, the target policy (the policy Q-learning is trying to learn) is always greedy with respect to the current action-value estimates, which is not needed during learning because we only aim to get the optimal action-value function, $q_*$. Once $q_*$ is obtained, we can directly extract the optimal policy from it by acting greedily with respect to $q_*$. The behaviour policy (the policy used to select actions during learning) can be any exploratory policy, such as $\\epsilon$-greedy or even random, as long as it ensures sufficient exploration. This separation between the behavior policy and the target policy is what makes Q-learning off-policy. \n",
     "\n",
     "Although Q-learning is an off-policy algorithm, it does not require importance sampling to reweight trajectories. Importance sampling is typically used to correct for differences in action-selection probabilities between the target policy and the behavior policy. However, Q-learning’s update rule always evaluates the next state using the greedy action with respect to the current action-value estimates, regardless of the action actually taken by the behavior policy. Because the target in the update is determined solely by the current Q-values and not by the behavior policy’s action probabilities, no such correction is needed.\n",
     "\n",
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4767fd5",
+   "id": "1192783a",
    "metadata": {},
    "source": [
     "# Models In Reinforcement Learning\n",
@@ -938,7 +938,7 @@
     "\n",
     "Note: For learning to happen, the agent must interact with an environment, which itself follows some transition and reward dynamics (this is the “true model” of the world). The key difference between model-based and model-free methods lies in whether the learning algorithm explicitly learns or uses its own approximation of this model. Both approaches aim to improve estimates of value functions (and ultimately the policy), but model-based methods do so by first estimating the transition and reward functions and then planning with them, whereas model-free methods skip this step and learn value functions directly from experience without building an explicit model.\n",
     "\n",
-    "Note: In any reinforcement learning setup, there is always one model that truly exists, which is the environment’s real rules. This is the true model of the world, whether it’s physics in the real world or the programmed logic in a simulator. The difference between model-based and model-free methods is about whether the agent also builds a second model of its own:\n",
+    "In any reinforcement learning setup, there is always one model that truly exists, which is the environment’s real rules. This is the true model of the world, whether it’s physics in the real world or the programmed logic in a simulator. The difference between model-based and model-free methods is about whether the agent also builds a second model of its own:\n",
     "\n",
     "Model-based methods have two models in play\n",
     "* The true model: the real environment’s transition and reward dynamics that the agent interact with.\n",
