--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1192783a",
+   "id": "80c341b3",
    "metadata": {},
    "source": [
     "# Models In Reinforcement Learning\n",
@@ -1019,7 +1019,17 @@
     "2. Model Query: Feed the selected state–action pair into the model, which returns a simulated reward and next state. In the basic Dyna-Q formulation, the model is assumed deterministic, meaning it returns the same result for a given state–action pair as last observed.\n",
     "3. Value Update: Apply the same Q-learning update rule as in direct RL, but using the simulated transition as if it were real.\n",
     "\n",
-    "Note: Each Q-planning step simulates and updates only one state–action pair (a single one-step transition) at a time. However, Q-planning is performed many times in succession—typically after every real Q-learning update—so the accumulated effect over multiple steps approximates broader planning.\n",
+    "Note: Each Q-planning step simulates and updates only one state–action pair (a single one-step transition) at a time. However, Q-planning is performed many times in succession after every real Q-learning update, meaning the agent will plan for multiple times before it takes every action in real life.\n",
+    "\n",
+    "Both Q-learning (direct RL) and Q-planning share and update the same action-value function. The difference lies in the source of the experience, where direct RL updates are based on real interactions with the environment and Q-planning updates are based on simulated interactions using the agent’s learned model. In this sense, Q-planning is essentially Q-learning in simulation, meaning Dyna-Q does not reduce the computational effort per update (it actually adds a bit more computation) since planning requires querying and simulating with the model.\n",
+    "\n",
+    "However, Dyna-Q greatly improves sample efficiency. By reusing real experiences through the model, the agent can perform many extra updates in simulation without needing to gather new real-world data. This allows it to learn a good policy with fewer real episodes, which is especially valuable when real interactions are costly or limited.\n",
+    "\n",
+    "<img src=\"https://www.mdpi.com/drones/drones-06-00365/article_deploy/html/images/drones-06-00365-g006-550.jpg\" width=500>\n",
+    "\n",
+    "One limitation of Dyna-Q is its inefficiency in the early stages of learning. When the agent has very limited or no data, most planning steps are not meaningful because the model has little information to simulate with. As a result, many of the early updates contribute little to improving the policy. However, once the agent begins to collect real experiences, planning can replay these experiences in simulation, compounding their value and allowing the agent to improve with far fewer real interactions. This makes Dyna-Q particularly powerful in later phases of training.\n",
+    "\n",
+    "Another limitation lies in the search control step. In Dyna-Q, state–action pairs are sampled at random for planning, which can be inefficient, especially when the state–action space is very large. Many updates may focus on unimportant or rarely visited states, leading to wasted computation. In such cases, a large number of planning steps is required before the updates significantly impact performance.\n",
     "\n",
     "### Dyna-Q Algorithm\n",
     "\n",
@@ -1049,22 +1059,28 @@
     "\n",
     "3. Repeat Step 2 until convergence or a stopping criterion is met (e.g., max episodes, small change in $q$).\n",
     "\n",
+    "<img src=\"https://miro.medium.com/1*a1ReZc7DyscMyo8nQpWuwg.png\" width=400>\n",
     "\n",
+    "## Wrong Models\n",
+    "Planning in model-based RL depends entirely on the agent’s internal model of the environment. However, this model can often be wrong, meaning the stored transitions differ from what actually happens in the real environment. There are two main ways a model can be wrong:\n",
     "\n",
+    "1. Incomplete Model: The agent has not yet experienced certain state–action pairs, so their outcomes are simply missing from the model. This typically happens in the early stages of learning, when exploration is still limited. \n",
     "\n",
+    "2. Inaccurate Model: The transitions stored in the model no longer match the environment’s true dynamics. This occurs most often when the environment is non-stationary (changing over time). In this case, planning may actually harm learning: the agent updates its value function based on outdated or incorrect information, pushing the policy in the wrong direction.  \n",
     "\n",
+    "### Addressing Wrong Models\n",
+    "1. Dealing with Incomplete Models: This can be easily solved by using an exploratory policy. With enough experience, the agent will eventually visit all state–action pairs, filling in the missing parts of the model and making it complete.\n",
     "\n",
-    "### Summary\n",
+    "2. Dealing with Inaccurate Models: This requires continuous exploration to ensure the model stays up to date. If the environment changes, the only way to correct the model is to revisit those states and actions. A common strategy is **Dyna-Q+**, an algorithm that adds an exploration bonus to the reward to encourage the agent to revisit states that have not been seen for a long time, where\n",
     "\n",
-    "Dyna-Q blends the strengths of model-based and model-free learning:\n",
-    "- **Model-Free Component:** Learns directly from real interactions (direct RL)\n",
-    "- **Model-Based Component:** Uses an internal model for planning and simulating extra experience\n",
+    "$$R = r + \\kappa \\sqrt{\\tau}$$\n",
     "\n",
-    "By alternating between these two, Dyna-Q improves data efficiency and overall learning speed.\n",
+    "* $r$: the original reward \n",
+    "* $\\kappa$: a small positive constant (bonus weight)  \n",
+    "* $\\tau$: the number of time steps since the state was last visited\n",
+    "* $\\sqrt{\\tau}$: a bonus, artificial reward to encourage exploration\n",
     "\n",
-    "\n",
-    "\n",
-    "<img src=\"https://miro.medium.com/1*a1ReZc7DyscMyo8nQpWuwg.png\" width=400>"
+    "The artificial reward (exploration bonus) is used only within the agent’s internal model, not in the real environment. It grows over time for states that have been neglected to encourage the agent to revisit less-frequented states. Initially, this would update the action-value function in the wrong direction during planning since the bonus reward doesn’t actually exist in the real environment. But this distortion is intentional because during planning, the action-value function is biased upward for underexplored states. This makes those states look more attractive, encouraging the agent to select them in real interactions. Then, once the agent visits the state in real experience, it receives the true reward from the environment. The action-value function is updated again, correcting any bias introduced by the artificial bonus. In the long run, this process ensures that the value function converges to reflect the true environment dynamics, while the exploration bonus serves only as a temporary motivator. The result is a policy that balances exploration and exploitation, maintaining accuracy while improving sample efficiency."
    ]
   },
   {
