RL: Added Linear Methods

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678bbf40",
+   "id": "a6e97152",
    "metadata": {},
    "source": [
     "# Reinforcement Learning with Function Approximation\n",
@@ -1160,13 +1160,69 @@
     "    - For each time step, make an gradient update\n",
     "        $$w \\leftarrow w + \\alpha \\big( G_t - \\hat{v}(S_t; w) \\big) \\nabla_w \\hat{v}(S_t; w)$$\n",
     "        \n",
-    "Notes: This algorithm uses Monte Carlo targets $G_t$, so it waits until the end of the episode to perform updates, which updates once for each time step in the episode after the episode finishes. This is not an online algorithm since the agent must wait for the episode to finish to learn.\n"
+    "Notes: This algorithm uses Monte Carlo targets $G_t$, so it waits until the end of the episode to perform updates, which updates once for each time step in the episode after the episode finishes. This is not an online algorithm since the agent must wait for the episode to finish to learn.\n",
+    "\n",
+    "### Semi-Gradient TD\n",
+    "\n",
+    "The Gradient Monte Carlo method is unbiased but suffers from two main issues:  \n",
+    "1. It is slow to converge because it waits for full returns.  \n",
+    "2. It is not online, as it must wait until the episode ends to compute $G_t$.\n",
+    "\n",
+    "We can address these issues by applying one-step bootstrapping with the TD algorithm. Instead of using the sampled return $G_t$ as the update target, we replace it with the TD target:\n",
+    "\n",
+    "$$\\text{TD target: } R_{t+1} + \\gamma \\hat{v}(S_{t+1}; w)$$\n",
+    "\n",
+    "Thus, the weight update becomes:\n",
+    "\n",
+    "$$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{v}(S_{t+1}; w) - \\hat{v}(S_t; w) \\big) \\nabla_w \\hat{v}(S_t; w)$$\n",
+    "\n",
+    "\n",
+    "This update does not compute the true gradient of the objective. This is because the TD target, $R_{t+1} + \\gamma \\hat{v}(S_{t+1}; w)$, itself depends on the weights $w$ through bootstrapping $\\hat{v}(S_{t+1}; w)$, which can be changed with a change in weights. This introduces bias, because the update direction is not the true gradient. For this reason, the method is called semi-gradient TD.\n",
+    "\n",
+    "The semi-gradient TD algorithm does not converge as robustly as gradient methods since it's gradient update is biased, but in most use cases, the convergence is good enough. Also, the semi-gradient TD algorithm has the following advantages\n",
+    "1. Online learning: Unlike Monte Carlo, this method can update after every step, not just after episodes.  \n",
+    "2. Faster convergence: Bootstrapping typically accelerates learning compared to pure Monte Carlo.  \n",
+    "3. Bias vs. variance: Semi-gradient TD introduces bias (due to ignoring part of the gradient), but it greatly reduces variance compared to MC, leading to faster practical convergence.\n",
+    "\n",
+    "\n",
+    "### Semi-Gradient TD Algorithm\n",
+    "1. Input:\n",
+    "    - A policy $\\pi$ for evaluation\n",
+    "    - A parametrized function $\\hat v(s; w)$ that is used for estimation\n",
+    "    - Step size $\\alpha$\n",
+    "2. Initialize all the weights $w$ arbitrarily\n",
+    "3. Loop for each episode\n",
+    "    - For each timestep in the episode\n",
+    "        - Select action $A$ based on the policy\n",
+    "        - Take the action and observe the reward, $R$, and the transition to the next state $S_{t+1}$\n",
+    "        - Update the weights\n",
+    "          $$w \\leftarrow w + \\alpha \\big( R_{t+1} + \\gamma \\hat{v}(S_{t+1}; w) - \\hat{v}(S_t; w) \\big) \\nabla_w \\hat{v}(S_t; w)$$\n",
+    "          \n",
+    "### Linear Methods\n",
+    "Linear approximation is a special and simpler case of general function approximation in reinforcement learning. Instead of directly using raw states, each state s is mapped to a real-valued feature vector\n",
+    "\n",
+    "$$x(s) = [x_1(s), x_2(s), x_3(s), \\dots, x_n(s)]$$\n",
+    "\n",
+    "where the feature vector $x(s)$ has the same dimensionality as the weight vector $w$. The state-value function can then be approximated as a weighted sum (dot product) of these features\n",
+    "\n",
+    "$$\\hat{v}(s; w) = w^\\top x(s) = \\sum_{i=1}^n w_i , x_i(s)$$\n",
+    "\n",
+    "For linear functions, the gradient with respect to the weight vector is straightforward, where\n",
+    "$$\\nabla_w \\hat{v}(s; w) = x(s)$$\n",
+    "\n",
+    "This means that the gradient is simply the feature vector itself, which makes linear function approximation computationally efficient and conceptually simple. It also highlights the importance of designing good features, as they directly determine how the weights are updated during learning.\n",
+    "\n",
+    "For Gradient Monte Carlo methods with linear function approximation, the learning process is guaranteed to converge to the global optimum of the value function approximation if\n",
+    "1. If the features are well-designed\n",
+    "2. The step size $\\alpha$ is appropriately chosen\n",
+    "\n",
+    "For\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "979ab4d9",
+   "id": "b4974731",
    "metadata": {},
    "outputs": [],
    "source": []
