--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -1216,7 +1216,23 @@
     "1. If the features are well-designed\n",
     "2. The step size $\\alpha$ is appropriately chosen\n",
     "\n",
-    "For\n"
+    "For semi gradient TD with linear function approximation, it also converges, but not the global optimum, but rather a point near the local optimum. This point is called the TD fixed point. Although the TD Fixed Point is not the global minimum, it has been proven that this point within a bounded expansion of the lowest possible error, where\n",
+    "\n",
+    "$$\\bar{VE}(w_{TD}) \\leq \\frac{1}{1-\\gamma}$$\n",
+    "\n",
+    "Therefore, the asymptotic error of the TD method is no more than $\\frac{1}{1 - \\gamma}$ times the smallest possible error, that attained in the limit by the Monte Carlo method. However in real applications, because $\\gamma$ is often near one, this expansion factor can be quite large, so there is substantial potential loss in asymptotic performance with the TD method. So, we should carefully select which method to use depend on the problem itself and the desired convergence\n",
+    "\n",
+    "\n",
+    "For semi-gradient TD methods using linear function approximation, convergence is still guaranteed under certain conditions, but not to the global minimum of the Mean Squared Value Error (MSVE). Instead, the algorithm converges to a point near the global optimum known as the TD fixed point.\n",
+    "\n",
+    "The TD fixed point represents a stable set of weights $w_{TD}$ where updates no longer change significantly. While this point may not perfectly minimize the error, it is provably close to the true minimum, with the performance bound\n",
+    "\n",
+    "$$\\bar{VE}(w_{TD}) \\leq \\frac{1}{1 - \\gamma} \\, \\bar{VE}(w_{MC})$$\n",
+    "\n",
+    "* $\\bar{VE}(w_{TD})$: the MSVE at the TD fixed point\n",
+    "* $\\bar{VE}(w_{MC})$: the achievable global minimum by the linear Monte Carlo method\n",
+    "\n",
+    "This inequality guarantees that the asymptotic error of TD will be no more than $\\frac{1}{1 - \\gamma}$ times the minimal error. In practice, when $\\gamma$ is small (far from 1), the bound is tight, and TD performs close to optimal; when $\\gamma$ is near 1 (long-term planning problems), the bound becomes large, meaning TD could potentially be much worse than the Monte Carlo solution. Thus, while TD methods are often preferred due to their online learning capability and lower variance, there is a trade-off in asymptotic performance. In problems with very high discount factors, it is important to carefully consider whether Monte Carlo or TD is more appropriate for the desired level of convergence."
    ]
   },
   {
